--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -12,15 +12,22 @@
     <h1>Things to do</h1>
     <table>
         {% for item in items %}
-            <tr>
+        <tr>
             {% if item.done %}
-                <td><strike>{{ item.name }}</strike></td>
+            <td><strike>{{ item.name }}</strike></td>
             {% else %}
-                <td>{{ item.name }}</td>
+            <td>{{ item.name }}</td>
             {% endif %}
+            <td>
+                <a href="/edit/{{ item.id }}">
+                    <button>Edit</button>
+                </a>
+            </td>
         </tr>
         {% empty %}
-        <tr><td>You have nothing to do.</td></tr>
+        <tr>
+            <td>You have nothing to do.</td>
+        </tr>
         {% endfor%}
     </table>
     <a href="/add">Add an Item</a>
