--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -19,9 +19,15 @@
             <td>{{ item.name }}</td>
             {% endif %}
             <td>
+                <a href="/toggle/{{ item.id }}">Toggle</a>
+            </td>
+            <td>
                 <a href="/edit/{{ item.id }}">
                     <button>Edit</button>
                 </a>
+            </td>
+            <td>
+                <a href="/delete/{{ item.id }}">Delete</a>
             </td>
         </tr>
         {% empty %}
