--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -19,7 +19,9 @@
             <td>{{ item.name }}</td>
             {% endif %}
             <td>
-                <a href="/toggle/{{ item.id }}">Toggle</a>
+                <a href="/toggle/{{ item.id }}">
+                    <button>Toggle</button>
+                </a>    
             </td>
             <td>
                 <a href="/edit/{{ item.id }}">
@@ -27,7 +29,9 @@
                 </a>
             </td>
             <td>
-                <a href="/delete/{{ item.id }}">Delete</a>
+                <a href="/delete/{{ item.id }}">
+                    <button>Delete</button>
+                </a>    
             </td>
         </tr>
         {% empty %}
